--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts",
+    "dev": "nodemon ./src/index.ts",
     "build": "npm install && tsc",
     "start": "node ./dist/index.js"
   },
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/node-cron": "^3.0.11",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^3.1.4",
